--- a/style.css
+++ b/style.css
@@ -80,9 +80,16 @@ a.button:hover{
 }
 
 .bar{
-    width: 1.5rem;
-    height: 0.1rem;
+    display: block;
+    width: 25px;
+    height: 3px;
     background-color: var(--c3);
+    transition: all 0.3s ease-in-out;
+    margin: 0.3rem auto;
+}
+
+.ham{
+    display: none;
 }
 
 /* line style */
@@ -104,6 +111,7 @@ a.button:hover{
     right: 0;
     background-color: var(--c2);
     z-index: 10;
+    min-height: 70px;
 }
 
 .innerlinks{
@@ -294,15 +302,49 @@ footer{
         display: none;
     }
 
-    .hamburger{
-        display: flex;
-        flex-direction: column;
-        gap: 0.3rem;
+    .ham{
+        display: block;
+        cursor: pointer;
     }
 
     .innerlinks{
-        display:none;
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+        text-align: center;
+        transition: 0.3s ease-in-out;
+        position: fixed;
+        top: 4rem;
+        width: 100%;
+        left: 100vh;
+        background-color: inherit;
+        padding: 10rem 0 25rem 0;
     }
+
+    .innerlinks.active{
+        left: 0;
+    }
+
+    .resume-btn{
+        border: none;
+        padding: 0;
+        width: auto;
+        margin: 0 auto;
+        transition: none;
+    }
+
+    .ham.active .bar:nth-child(2){
+        display: none;
+    }
+
+    .ham.active .bar:nth-child(1){
+        transform: translateY(9px) rotate(45deg);
+    }
+
+    .ham.active .bar:nth-child(3){
+        transform: translateY(0) rotate(-45deg);
+    }
+    
 }
 
 @media (max-width: 750px){
