--- a/styles/about.css
+++ b/styles/about.css
@@ -1,3 +1,25 @@
+#about{
+    display: flex; 
+    justify-content: flex-end;
+    gap: 5%;
+    align-items: center;
+    height: 90vh;
+}
+
 #about img{
     border-radius: 50%;
+}
+
+.about_sec{
+    flex-basis: 60%;
+}
+
+.about_sec h3{
+    font-size: 2.5rem;
+    text-align: center;
+    color: var(--c5);
+}
+
+.about_sec p{
+    padding: 0 2rem 0 0;
 }
