--- a/styles/about.css
+++ b/styles/about.css
@@ -12,14 +12,26 @@
 
 .about_sec{
     flex-basis: 60%;
+    padding-bottom: 3rem;
 }
 
 .about_sec h3{
     font-size: 2.5rem;
     text-align: center;
     color: var(--c5);
+    margin-top: 1rem;
 }
 
 .about_sec p{
     padding: 0 2rem 0 0;
+}
+
+#experience h2{
+    margin-bottom: 5rem;
+}
+
+#experience p{
+    margin: 2rem auto;
+    max-width: 1000px;
+    font-size: 1.2rem;
 }
