--- a/styles/global.css
+++ b/styles/global.css
@@ -123,6 +123,7 @@ a.button:hover {
   margin-left: 2rem;
   padding: 1rem 0.5rem;
   margin-bottom: -0.5rem;
+  box-sizing: content-box;
 }
 
 /* left section styles */
