--- a/styles/index.css
+++ b/styles/index.css
@@ -43,6 +43,10 @@
     color: white;
     padding: 1.5rem 1.5rem 2rem;
 }
+
+.proj h4 {
+    font-size: 1.1rem;
+}
   
 /* contact section */
 #contact p {
