--- a/styles/about.css
+++ b/styles/about.css
@@ -1,86 +1,98 @@
-#about{
-    display: flex; 
-    justify-content: flex-end;
-    gap: 5%;
-    align-items: center;
-    min-height: 90vh;
+#about {
+	display: flex;
+	justify-content: flex-end;
+	gap: 5%;
+	align-items: center;
+	min-height: 90vh;
 }
 
-#about img{
-    border-radius: 50%;
+#about img {
+	border-radius: 50%;
 }
 
-.about_sec{
-    flex-basis: 60%;
-    padding-bottom: 3rem;
+.about_sec {
+	flex-basis: 60%;
+	padding-bottom: 3rem;
 }
 
-.about_sec h3{
-    font-size: 2.5rem;
-    text-align: center;
-    color: var(--c5);
-    margin-top: 1rem;
+.about_sec h3 {
+	font-size: 2.5rem;
+	text-align: center;
+	color: var(--c5);
+	margin-top: 1rem;
 }
 
-.about_sec p{
-    padding: 0 2rem 0 0;
+.about_sec p {
+	padding: 0 2rem 0 0;
 }
 
-#experience h2{
-    margin-bottom: 5rem;
+#experience h2 {
+	margin-bottom: 5rem;
 }
 
-#experience p{
-    margin: 2rem auto;
-    max-width: 1000px;
-    font-size: 1.2rem;
+#experience p,
+h4 {
+	margin: 2rem auto;
+	max-width: 1000px;
+	font-size: 1.3rem;
+}
+
+#experience h4 {
+	font-size: 1.5rem;
+	margin-bottom: -1.5rem;
+}
+
+.description {
+	display: block;
+	font-size: 1rem;
+	margin-bottom: 2rem;
 }
 
 /* media queries */
-@media (max-width: 1300px){
-    #about img{
-        height: 20rem;
-        width: auto;
-    }
+@media (max-width: 1300px) {
+	#about img {
+		height: 20rem;
+		width: auto;
+	}
 }
 
-@media (max-width: 1200px){
-    #about img{
-        height: 17rem;
-    }
+@media (max-width: 1200px) {
+	#about img {
+		height: 17rem;
+	}
 
-    #about{
-        gap: 2%;
-    }
+	#about {
+		gap: 2%;
+	}
 }
 
-@media (max-width: 975px){
-    #about{
-        flex-direction: column;
-        margin-top: 2rem;
-    }
+@media (max-width: 975px) {
+	#about {
+		flex-direction: column;
+		margin-top: 2rem;
+	}
 
-    .about_sec p{
-        padding: 0 3rem;
-    }
+	.about_sec p {
+		padding: 0 3rem;
+	}
 }
 
 @media (max-width: 850px) {
-    .about_sec p{
-        padding: 0;
-    }
+	.about_sec p {
+		padding: 0;
+	}
 
-    #about img{
-        height: 15rem;
-    }
+	#about img {
+		height: 15rem;
+	}
 }
 
-@media (max-width: 400px){
-    #about img{
-        height: 12rem;
-    }
+@media (max-width: 400px) {
+	#about img {
+		height: 12rem;
+	}
 
-    #about{
-        margin-top: -1rem;
-    }
+	#about {
+		margin-top: -1rem;
+	}
 }
